Added rest end points

--- a/SpringCrud/src/main/resources/application.properties
+++ b/SpringCrud/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#Server Runnign port
+server.port=7676
 
+#Enable debug messages to the console
+logging.level.root=WARN
+logging.level.com.masm=TRACE
